Finaliza testes de aceitação start-order-bot.feature